# Portfolio

./: README.md
C & C++/generic programming/: CMakeLists.txt  makefile  markov_chain.c  markov_chain.h  snakes_and_ladders.c  tweets_generator.c
C & C++/movie recommendation system/: CMakeLists.txt  Movie.cpp  Movie.h  RecommendationSystem.cpp  RecommendationSystem.h  RecommendationSystemLoader.cpp  RecommendationSystemLoader.h  RecommendationSystemLoader_input.txt  User.cpp  User.h  UsersLoader.cpp  UsersLoader.h  UsersLoader_input.txt  presubmit.cpp  presubmit.in_m  presubmit.in_m15  presubmit.in_m16  presubmit.in_m5  presubmit.in_m6  presubmit.in_m7  presubmit.in_u14  presubmit.in_u16  presubmit.in_u4  presubmit.in_u5  presubmit.in_u6  presubmit.in_u7  print_main.cpp
C & C++/multi thread programming/: CMakeLists.txt  Makefile  MapReduceClient.cpp  MapReduceFramework.cpp
C & C++/multi thread programming/Atomic/: atomicdemo  atomicdemo.cpp  atomicdemo_multivar
C & C++/multi thread programming/Sample Client/: MapReduceFramework.h  SampleClient
C & C++/neural network based number identifier/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  main.cpp
C & C++/tweets generator/: CMakeLists.txt  markov_chain.c  markov_chain.h  tweets_generator.c
C & C++/user level threads/: CMakeLists.txt  Thread.cpp  Thread.h  uthreads.cpp
C & C++/virtual memory - hierarchical page tables/: CMakeLists.txt  Makefile  MemoryConstants.h  VirtualMemory.cpp
Java/Tic - Tac - Toe game/: Board.java  CleverPlayer.java  Game.java  GeniusPlayer.java  (+9 more)
(+106 files in other folders)
